[package]
name = "build_version"
version = "0.1.0"
edition = "2021"
description = "Build Version tool to generate unique version number using industry compliant standards such as SemVer, CalVer and more."
license = "MIT"
license-file = "license.txt"
homepage = "https://github.com/alacrity-sg/build-version-rust"
repository = "https://github.com/alacrity-sg/build-version-rust.git"
[dependencies]
