[package]
name = "alacrity-build-version"
version = "0.1.0"
edition = "2021"
description = "Build Version tool to generate unique version number using industry compliant standards such as SemVer, CalVer and more."
license = "MIT"
homepage = "https://github.com/alacrity-sg/build-version-rust"
repository = "https://github.com/alacrity-sg/build-version-rust.git"
[dependencies]
git2 = "0.20.0"
reqwest = "0.12.12"
semver = "1.0.24"
